# bry_desafio

./: CMakeLists.txt  README.md
output/: arquivo_assinado.p7s
src/: actions.h  helpers.h  middlewares.h  server.cc  types.h
